[package]
name = "z80emu"
version = "0.6.0"
authors = ["Rafał Michalski <royaltm75@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"
include = ["src/", "CHANGELOG.md", "/README.md", "COPYING", "COPYING.LESSER"]
readme = "README.md"
repository = "https://github.com/royaltm/rust-z80emu"
categories = ["emulators", "no-std"]
keywords = ["Z80", "retro"]
description = "A minimalistic Z80 CPU emulation library."

[features]
default = ["std", "serde"]
std = ["serde/std"]

[dependencies]
arrayvec = "0.7.1"
bitflags = "1.3.2"
log = "0.4"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1.0"

[dev-dependencies]
clap = "2.33"
rand = "0.7"
serde_json = "1.0"
bincode = "1.3"
simplelog = "0.8"
pancurses = "0.16"
