[package]
name = "z80emu"
version = "0.11.0"
authors = ["Rafał Michalski <royaltm75@gmail.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
include = ["src/", "CHANGELOG.md", "/README.md", "COPYING", "COPYING.LESSER"]
readme = "README.md"
repository = "https://github.com/royaltm/rust-z80emu"
categories = ["emulators", "no-std"]
keywords = ["Z80", "retro"]
description = "ZiLOG Z80 microprocessor emulation library."

[features]
default = ["std", "serde"]
std = ["serde/std"]

[[example]]
name = "terminal"
path = "examples/terminal.rs"
required-features = ["std"]

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
bitflags = "2.4.2"
log = "0.4"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1.0"

[dev-dependencies]
clap = "2.34"
rand = "0.8"
serde_json = "1.0"
bincode = "1.3"
simplelog = "0.11"
pancurses = "0.17"
ral1243 = { version = ">=1", path = "examples/ral1243", features = ["std"] }

[profile.release]
# lto = 'thin'
# panic = 'abort'
# opt-level = 3
# incremental = false
# codegen-units = 1

[workspace]
members = [
  ".",
  "examples/embedded",
  "examples/ral1243"
]
