[package]
name = "ral1243"
version = "2.0.0"
authors = ["Rafał Michalski <royaltm75@gmail.com>"]
edition = "2021"
description = "RAL 1243 is a fictional computer emulator for z80emu"
license = "LGPL-3.0-or-later"
categories = ["emulators", "no-std"]
keywords = ["Z80"]
readme = "README.md"
repository = "https://github.com/royaltm/rust-z80emu"

[features]
default = []
std = ["z80emu/std"]

[dependencies]
log = "0.4"

[dependencies.z80emu]
version = ">=0.11"
path = "../.."
default-features = false
